Fixed issue with images not aligning correctly on checkin

--- a/css/scss/modules/_s3_uploader.scss
+++ b/css/scss/modules/_s3_uploader.scss
@@ -20,6 +20,8 @@
     margin-top: 1em;
     margin-bottom: 1em;
     width: 100%;
+    overflow: auto;
+    zoom: 1;
 
     select {
       margin-bottom: 0;
